<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/remarks_mand"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:visibility="visible" />

            <EditText
                android:id="@+id/comment_value"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100"
                android:layout_marginTop="@dimen/size_10"
                android:background="@drawable/rounded_border_edit"
                android:fontFamily="@font/inter_regular"
                android:gravity="start"
                android:hint="@string/remarks"
                android:paddingLeft="@dimen/size_5"
                android:paddingTop="@dimen/size_5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:visibility="visible" />

            <Button
                android:id="@+id/add"
                android:layout_width="@dimen/size_120"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_20"
                android:background="@drawable/button_rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>